test/Serialization/Inputs/xref-nested-clang-type/NestedClangTypes.h
@@ -1,0 +1,7 @@
+struct Outer {
+  int value;
+};
+
+struct __attribute__((swift_name("Outer.InterestingValue"))) Inner {
+  int value;
+};
